--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,15 +1,13 @@
+spring:
+  application:
+    name: eureka-server
 server:
   port: 8880
-
 eureka:
   instance:
     hostname: localhost
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    register-with-eureka: false
+    fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/${spring.application.name}
-
-spring:
-  application:
-    name: eurka-server
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
